# Rokisim-Revival

./: .coverage  .gitignore  README.md  dev-requirements.txt  joint_control_gui.py  main.py  pyproject.toml  requirements.txt  setup.py
Deprecated/: instructionSet.py  joint_control_gui.py  kinematics.py  rokisim_sender.py
docs/: usage.md
examples/: ABB_IRB120.xml  sample_program.txt  test_robot.xml
plugins/: advanced_example.py  debug_console.py  demo_joint_control.py  greet_plugin.py
src/: gui.py  instruction_set.py  kinematics.py  sender.py
src/rokisim_revival/: config.py  gui.py  instruction_set.py  kinematics.py  plugin.py  plugin_manager.py  sender.py  xml_parser.py
tests/: test_config.py  test_gui.py  test_instruction_set.py  test_kinematics.py  test_sender.py
